--- a/package.json
+++ b/package.json
@@ -65,10 +65,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
-    "@bit/finnovation.kb-dev.kb-loader": "0.0.1",
-    "@bit/finnovation.kb-dev.loader": "0.0.6",
-    "@bit/finnovation.kb-dev.with-theme-component": "0.0.14",
-    "@bit/finnovation.kz-dev.loader": "0.0.3",
+    "@bit/ganeshram-bee.experiment.with-theme-component": "0.0.14",
     "chalk": "2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
