--- a/package.json
+++ b/package.json
@@ -172,7 +172,7 @@
   "bit": {
     "env": {
       "compiler": "bit.envs/compilers/react@1.0.16",
-      "tester": "finnovation.kb-dev/testers/jest@22.4.4"
+      "tester": "giladshoham.for-krazybee/testers/jest@22.4.7"
     },
     "componentsDefaultDirectory": "components/{name}",
     "packageManager": "npm"
