branch change in yml

--- a/.github/workflows/bitexport.yml
+++ b/.github/workflows/bitexport.yml
@@ -6,7 +6,7 @@ name: Ganesh Ram Bit export CI
 # events but only for the master branch
 on:
   push:
-    branches: [ bitCompononents ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
