change in workflow

--- a/.github/workflows/bitexport.yml
+++ b/.github/workflows/bitexport.yml
@@ -15,32 +15,38 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: macos-latest
+    runs-on: ubuntu-16.04
     env:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
       BIT_COLLECTION: ${{ secrets.BIT_COLLECTION }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Install Node version 9.4.0
-      run: nvm install v9.4.0
+    - name: Install Node version 9.4.0 and other commands
+      run: |
+        nvm --version
+        nvm install v9.4.0
+        lsb_release -a
+        echo "Can you see this?" > file.txt
+        pwd
+        ls
     - name: Check Node version is 9.4.0 or not
       run: node -v && npm -v
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+    # - uses: actions/checkout@v2
 
-    # Install dependencies and build app
-    - name: Install Dependencies
-      run: npm install
-    - name: Install bit-bin
-      run: sudo npm install bit-bin -g
-    - name: Bit tag & Bit export
-      run: |
-        bit config set analytics_reporting false
-        bit config set anonymous_reporting false
-        bit config set user.token $BIT_TOKEN
-        bit config 
-        bit -v && bit import && bit build
-        bit status
-        bit test
-        bit tag -a
-        bit export $BIT_COLLECTION
+    # # Install dependencies and build app
+    # - name: Install Dependencies
+    #   run: npm install
+    # - name: Install bit-bin
+    #   run: sudo npm install bit-bin -g
+    # - name: Bit tag & Bit export
+    #   run: |
+    #     bit config set analytics_reporting false
+    #     bit config set anonymous_reporting false
+    #     bit config set user.token $BIT_TOKEN
+    #     bit config 
+    #     bit -v && bit import && bit build
+    #     bit status
+    #     bit test
+    #     bit tag -a
+    #     bit export $BIT_COLLECTION
