--- a/.github/workflows/bitexport.yml
+++ b/.github/workflows/bitexport.yml
@@ -35,8 +35,8 @@ jobs:
       run: node -v && npm -v
       
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - name: "Clone repository" 
-      uses: actions/checkout@v2
+    # - name: "Clone repository" 
+    #   uses: actions/checkout@v2
 
     - name: "Is repo cloned?"
     - run: |
