--- a/.github/workflows/bitexport.yml
+++ b/.github/workflows/bitexport.yml
@@ -15,7 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-16.04
+    runs-on: macos-latest
     env:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
       BIT_COLLECTION: ${{ secrets.BIT_COLLECTION }}
