--- a/.github/workflows/bitexport.yml
+++ b/.github/workflows/bitexport.yml
@@ -23,10 +23,10 @@ jobs:
     steps:
     - name: Basic commands
       run: |
-        lsb_release -a
         echo "Can you see this?" > file.txt
         pwd
         ls
+        cat file.txt
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
