--- a/.github/workflows/bitexport.yml
+++ b/.github/workflows/bitexport.yml
@@ -48,15 +48,15 @@ jobs:
     - name: Install Dependencies
       run: npm install
     - name: Install bit-bin
-      run: npm install bit-bin -g
-    # - name: Bit tag & Bit export
-    #   run: |
-    #     bit config set analytics_reporting false
-    #     bit config set anonymous_reporting false
-    #     bit config set user.token $BIT_TOKEN
-    #     bit config 
-    #     bit -v && bit import && bit build
-    #     bit status
-    #     bit test
-    #     bit tag -a
-    #     bit export $BIT_COLLECTION
+      run: npm install -g bit-bin@dev
+    - name: Bit tag & Bit export
+      run: |
+        bit config set analytics_reporting false
+        bit config set anonymous_reporting false
+        bit config set user.token $BIT_TOKEN
+        bit config 
+        bit -v
+        bit status
+        bit test
+      #  bit tag -a
+      #  bit export $BIT_COLLECTION
