change in work flow 14

--- a/.github/workflows/bitexport.yml
+++ b/.github/workflows/bitexport.yml
@@ -58,5 +58,6 @@ jobs:
         bit -v
         bit status
         bit test
+        ls .git/bit/components/
       #  bit tag -a
       #  bit export $BIT_COLLECTION
